Ensure tooltips don't overlap with logos

--- a/hexwall.css
+++ b/hexwall.css
@@ -40,19 +40,24 @@
 .description {
     visibility: hidden;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
     padding: 10px;
     border-radius: 5px;
     text-align: center;
     z-index: 2;
+    display: inline-block;
 }
 
 .hex:hover .description {
     visibility: visible;
+}
+
+.hex:nth-child(odd):hover .description {
+    bottom: 100%;
+}
+.hex:nth-child(even):hover .description {
+    top: 60%;
 }
 
 .gradient-rectangle {
